Removed margin from body, and added padding to root level container. This ensures that there won't be any unnesseccary scrollbar as the browser would previously calculate viewport height to 100%+60px.

--- a/studlan/themes/bootstrap202/static/css/custom.css
+++ b/studlan/themes/bootstrap202/static/css/custom.css
@@ -3,12 +3,16 @@ html, body {
 }
 
 body {
-    padding-top: 60px;
+    /*padding-top: 60px;*/
     background: url("../img/bg.png") repeat-x scroll 0 -160px transparent;
 }
 
 h1 {
     margin-bottom: 0.5em;
+}
+
+body > div.container {
+    padding-top: 60px;
 }
 
 .white-text {
